[package]
name = "ndarray-handson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "<1.0.49"
ndarray = "0.15.4"
jpeg-decoder = "0.2.1"
ndarray-vision = { git = "https://github.com/RahulDas-dev/ndarray-vision", branch = "master", features=["intel-mkl"] }
